--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -53,6 +53,39 @@ button
   border-radius: 5px
   box-sizing: border-box
 
+body
+  font-family: Arial, sans-serif
+  margin: 0
+
+nav ul
+  list-style-type: none
+  padding: 0
+  margin: 0
+  background-color: #333
+
+nav ul li
+  display: inline-block
+
+nav ul li a
+  display: block
+  padding: 10px 20px
+  color: #fff
+  text-decoration: none
+
+nav ul li a:hover
+  background-color: #555
+
+nav ul li .material-symbols-rounded
+  font-family: 'Material Symbols Rounded', sans-serif
+  font-size: 24px
+  margin-right: 5px
+
+.container
+  max-width: 1200px
+  margin: 0 auto
+  padding: 20px
+
+
 // Media query para dispositivos con un ancho máximo de 600px
 @media screen and (max-width: 600px)
   main
