--- a/views/index.pug
+++ b/views/index.pug
@@ -5,22 +5,26 @@ block content
 
   main(id="vista-index")
     p Tienes #{creditosDisponibles} créditos disponibles.
-    form(action="/cifrar", method="POST")
-      .input-container
-        label(for="texto-a-cifrar") Texto a Cifrar:
-        input(type="text", id="texto-a-cifrar", name="texto-a-cifrar", placeholder="Ingresa el texto a cifrar", required)
 
-      .input-container
-        label(for="clave-cifrado") Clave de Cifrado:
-        input(type="text", id="clave-cifrado", name="clave-cifrado", placeholder="Ingresa la clave de cifrado")
+    - if (creditosDisponibles > 0)
+      form(action="/cifrar", method="POST" id="cifrar-form")
+        .input-container
+          label(for="texto-a-cifrar") Texto a Cifrar:
+          input(type="text", id="texto-a-cifrar", name="texto-a-cifrar", placeholder="Ingresa el texto a cifrar", required)
 
-      .input-container
-        label(for="algoritmo") Algoritmo de Cifrado:
-        select(id="algoritmo", name="algoritmo")
-          option(value="cesar") Código César
-          option(value="sustitucion") Sustitución
-          option(value="base") Base64
-          option(value="hexadecimal") Hexadecimal
-          option(value="binario") Binario
+        .input-container
+          label(for="clave-cifrado") Clave de Cifrado:
+          input(type="text", id="clave-cifrado", name="clave-cifrado", placeholder="Ingresa la clave de cifrado")
 
-      button(type="submit") Convertir
+        .input-container
+          label(for="algoritmo") Algoritmo de Cifrado:
+          select(id="algoritmo", name="algoritmo")
+            option(value="cesar") Código César
+            option(value="sustitucion") Sustitución
+            option(value="base") Base64
+            option(value="hexadecimal") Hexadecimal
+            option(value="binario") Binario
+
+        button(type="submit" id="submit-btn") Convertir
+    - else
+      p No tienes créditos disponibles para cifrar. Por favor, inicia sesión para obtener más créditos.
