--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -63,8 +63,6 @@ button {
   box-sizing: border-box;
 }
 
-/* Estilos para el header */
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -93,7 +91,7 @@ nav ul li a:hover {
 }
 
 nav ul li .material-symbols-rounded {
-  font-family: 'Material Symbols Rounded', sans-serif;
+  font-family: "Material Symbols Rounded", sans-serif;
   font-size: 24px;
   margin-right: 5px;
 }
@@ -103,7 +101,6 @@ nav ul li .material-symbols-rounded {
   margin: 0 auto;
   padding: 20px;
 }
-
 
 @media screen and (max-width: 600px) {
   main {
