Funcionalidad a la base de datos

--- a/views/cifrar.pug
+++ b/views/cifrar.pug
@@ -11,4 +11,12 @@ block content
         h2 Texto Cifrado
         p#texto-cifrado #{textoCifrado}
 
+      .content-box
+        h2 Texto Cifrado
+        p clave: #{clave}
+
+      .content-box
+        h2 Texto Cifrado
+        p algoritmo: #{algoritmo}
+
       button(type="button" onclick="location.href='/ '") OK!
