--- a/views/cifrar.pug
+++ b/views/cifrar.pug
@@ -12,11 +12,11 @@ block content
         p#texto-cifrado #{textoCifrado}
 
       .content-box
-        h2 Texto Cifrado
+        h2 Clave
         p clave: #{clave}
 
       .content-box
-        h2 Texto Cifrado
+        h2 Algoritmo
         p algoritmo: #{algoritmo}
 
       button(type="button" onclick="location.href='/ '") OK!
