Cambios importantes al front
Añadido de responsividad

--- a/views/cifrar.pug
+++ b/views/cifrar.pug
@@ -2,8 +2,8 @@ extends header
 
 block content
   main
-    .container
-      .content-box
+    div.container
+      div.content
         h2 Texto Original
         p#texto-original #{textoOriginal}
 
