--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -1,102 +1,190 @@
-body
-  font-family: Arial, sans-serif
-  margin: 0
-  padding: 0
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap')
 
-header
-  text-align: center
-  padding: 20px 0
-  background-color: #333
-  color: #fff
-
-main
-  max-width: 600px
-  margin: 0 auto
-  padding: 20px
-
-.input-container
-  margin-bottom: 20px
-
-.input-container label
-  display: block
-  margin-bottom: 5px
-
-.input-container input[type="text"],
-.input-container select
-  width: 100%
-  padding: 10px
-  border: 1px solid #ccc
-  border-radius: 5px
-  box-sizing: border-box
-
-button
-  display: block
-  width: 100%
-  padding: 10px
-  background-color: #333
-  color: #fff
-  border: none
-  border-radius: 5px
-  cursor: pointer
-
-.output-container
-  margin-top: 20px
-
-.output-container label
-  display: block
-  margin-bottom: 5px
-
-.output-container input[type="text"]
-  width: 100%
-  padding: 10px
-  border: 1px solid #ccc
-  border-radius: 5px
-  box-sizing: border-box
-
-body
-  font-family: Arial, sans-serif
-  margin: 0
-
-nav ul
-  list-style-type: none
+* 
   padding: 0
   margin: 0
-  background-color: #333
-
-nav ul li
-  display: inline-block
-
-nav ul li a
-  display: block
-  padding: 10px 20px
-  color: #fff
+  box-sizing: border-box
+  font-family: sans-serif
   text-decoration: none
+  list-style: none
+  font-family: "Poppins", sans-serif
 
-nav ul li a:hover
-  background-color: #555
+.header
+  position: sticky
+  top: 0
+  width: 100%
+  box-shadow: 0 4px 20px hsla(207, 24%, 35%, 0.1)
+  background-color: #151418
+  z-index: 1
 
-nav ul li .material-symbols-rounded
-  font-family: 'Material Symbols Rounded', sans-serif
+nav
+  display: flex
+  justify-content: space-between
+  align-items: center
+  padding: 20px 30px
+
+.logo a
   font-size: 24px
-  margin-right: 5px
+  font-weight: bold
+  color: #fff
+
+.logo a span
+  color: #8739fa
+
+.menu
+  display: flex
+  justify-content: center
+  align-items: center
+
+.menu a
+  display: block
+  padding: 7px 15px
+  font-size: 17px
+  font-weight: 500
+  transition: 0.2s all ease-in-out
+  color: #fff
+
+.menu:hover a
+  opacity: 0.4
+
+.menu a:hover
+  opacity: 1
+  color: #fff
+
+.menu-icon
+  display: none
+
+#menu-toggle
+  display: none
+
+#menu-toggle:checked ~ .menu
+  transform: scale(1, 1)
+
+@media only screen and (max-width: 950px)
+  .menu
+    flex-direction: column
+    background-color: #151418
+    align-items: start
+    position: absolute
+    top: 70px
+    left: 0
+    width: 100%
+    z-index: 1
+    transform: scale(1, 0)
+    transform-origin: top
+    transition: transform 0.3s ease-in-out
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px
+
+  .menu a
+    margin-left: 12px
+
+  .menu li
+    margin-bottom: 10px
+
+  .menu-icon
+    display: block
+    color: #fff
+    font-size: 28px
+    cursor: pointer
+
+/* Estilos del formulario */
+body
+  min-height: 100vh
+  width: 100%
+  background: gray
+  display: flex
+  align-items: center
+  flex-direction: column
 
 .container
-  max-width: 1200px
-  margin: 0 auto
-  padding: 20px
+  margin-top: 20px
+  width: 85%
+  background: #fff
+  border-radius: 6px
+  padding: 20px 60px 30px 40px
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
 
+.container .content
+  display: flex
+  align-items: center
+  justify-content: space-between
 
-// Media query para dispositivos con un ancho máximo de 600px
-@media screen and (max-width: 600px)
-  main
-    padding: 10px
+.container .content .right-side
+  width: 75%
+  margin-left: 75px
 
-  .input-container input[type="text"],
-  .input-container select
-    padding: 8px
+.content .right-side .topic-text
+  font-size: 23px
+  font-weight: 600
+  color: #3e2093
 
-  button
-    padding: 8px
+.right-side .input-box
+  height: 50px
+  width: 100%
+  margin: 12px 0
 
-  .output-container input[type="text"]
-    padding: 8px
+.right-side .input-box input,
+.right-side .input-box textarea,
+.right-side .input-box option,
+.right-side .input-box select
+  height: 100%
+  width: 100%
+  border: none
+  outline: none
+  font-size: 16px
+  background: #f0f1f8
+  border-radius: 6px
+  padding: 0 15px
+  resize: none
+
+.right-side .message-box
+  min-height: 110px
+
+.right-side .input-box textarea
+  padding-top: 6px
+
+.right-side button
+  display: inline-block
+  margin-top: 12px
+
+.right-side button
+  color: #fff
+  font-size: 18px
+  outline: none
+  border: none
+  padding: 8px 16px
+  border-radius: 6px
+  background: #3e2093
+  cursor: pointer
+  transition: all 0.3s ease
+
+button:hover
+  background: #5029bc
+
+@media (max-width: 950px)
+  .container
+    width: 90%
+    padding: 30px 40px 40px 35px
+
+  .container .content .right-side
+    width: 75%
+    margin-left: 55px
+
+@media (max-width: 820px)
+  .container
+    margin: 40px 0
+    height: 100%
+
+  .container .content
+    flex-direction: column-reverse
+
+  .container .content .left-side
+    width: 100%
+    flex-direction: row
+    margin-top: 40px
+    justify-content: center
+    flex-wrap: wrap
+
+  .container .content .right-side
+    width: 100%
+    margin-left: 0
