--- a/views/header.pug
+++ b/views/header.pug
@@ -4,23 +4,28 @@ html
     title= title
     link(rel='stylesheet', href='/css/styles.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200')
-  body
-    nav
-      ul
-        if !user
-          li
-            a(href='/login') Iniciar sesión
-          li
-            a(href='/') Inicio
-        else
-          li
-            a(href='/') Inicio
-              li
-                a(href='/usuarios')
-                  i(class='material-symbols-rounded') person
-            li
-              a(href='/logout')
-                i(class='material-symbols-rounded') logout
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
-    .container
-      block content
+  body(class="header-body")
+    header.header
+      nav
+        input(type='checkbox', id='menu-toggle')
+        label.menu-icon(for='menu-toggle') ☰
+        ul.menu
+          if !user
+            li
+              a(href='/login') Iniciar sesión
+            li
+              a(href='/') Inicio
+          else
+            li
+              a(href='/') Inicio
+                li
+                  a(href='/usuarios')
+                    i(class='material-symbols-rounded') person
+              li
+                a(href='/logout')
+                  i(class='material-symbols-rounded') logout
+
+    block content
