--- a/views/index.pug
+++ b/views/index.pug
@@ -1,25 +1,21 @@
-extends header
+include header
 
-block content
-  link(rel="stylesheet", href="/css/styles.css")
-
-  main(id="vista-index")
-      form(action="/cifrar", method="POST" id="cifrar-form")
-        .input-container
-          label(for="texto-a-cifrar") Texto a Cifrar:
-          input(type="text", id="texto-a-cifrar", name="texto-a-cifrar", placeholder="Ingresa el texto a cifrar", required)
-
-        .input-container
-          label(for="clave-cifrado") Clave de Cifrado:
-          input(type="text", id="clave-cifrado", name="clave-cifrado", placeholder="Ingresa la clave de cifrado")
-
-        .input-container
-          label(for="algoritmo") Algoritmo de Cifrado:
-          select(id="algoritmo", name="algoritmo")
-            option(value="cesar") Código César
-            option(value="sustitucion") Sustitución
-            option(value="base") Base64
-            option(value="hexa") Hexadecimal
-            option(value="binario") Binario
-
-        button(type="submit" id="submit-btn") Convertir
+body
+  div.container
+    div.content
+      div.right-side
+        div.topic-text Cifrado de textos en español
+        p Cifrado de textos en español. Solo tienes 3 intentos gratuitos. Después de usarlos tendrás que logearte para un acceso ilimitado.
+        form(action="/cifrar", method="post")
+          div.input-box.message-box
+            textarea(placeholder="Texto a cifrar...", required="", name="texto-a-cifrar", id="texto-a-cifrar")
+          div.input-box
+            input(type="text", name="clave-cifrado", id="clave-cifrado", required="", placeholder="Ingresa la clave de cifrado")
+          div.input-box
+            select(name="algoritmo", id="")
+              option(value="cesar") Código César
+              option(value="sustitucion") Sustitución
+              option(value="base") Base 64
+              option(value="hexa") Hexadecimal
+              option(value="binario") Binario
+          button(type="submit", id="submit-btn") Convertir
