--- a/views/login.pug
+++ b/views/login.pug
@@ -11,4 +11,4 @@ block content
           div.input-box
             input(type="password", id="password", name="password", placeholder="Ingresa tu contraseña", required)
           button(type="submit") Iniciar Sesión
-        a(href="/registro") Registrarse
+        a(href="/registro", class="registro") Registrarse
