--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,4 @@
-/* Google Font CDN Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
-/* CSS for Header */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -9,7 +6,7 @@
   font-family: sans-serif;
   text-decoration: none;
   list-style: none;
-  font-family: "Poppins" , sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .header {
@@ -89,15 +86,12 @@ nav {
     transition: transform 0.3s ease-in-out;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   }
-
   .menu a {
     margin-left: 12px;
   }
-
   .menu li {
     margin-bottom: 10px;
   }
-
   .menu-icon {
     display: block;
     color: #fff;
@@ -105,7 +99,6 @@ nav {
     cursor: pointer;
   }
 }
-
 /* Estilos del formulario */
 body {
   min-height: 100vh;
@@ -192,28 +185,45 @@ button:hover {
   background: #5029bc;
 }
 
+.registro {
+  display: inline-block;
+  margin-top: 12px;
+}
+
+.registro {
+  color: #fff;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 6px;
+  background: #3e2093;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.registro {
+  background: #5029bc;
+}
+
 @media (max-width: 950px) {
   .container {
     width: 90%;
     padding: 30px 40px 40px 35px;
   }
-
   .container .content .right-side {
     width: 75%;
     margin-left: 55px;
   }
 }
-
 @media (max-width: 820px) {
   .container {
     margin: 40px 0;
     height: 100%;
   }
-
   .container .content {
     flex-direction: column-reverse;
   }
-
   .container .content .left-side {
     width: 100%;
     flex-direction: row;
@@ -221,9 +231,16 @@ button:hover {
     justify-content: center;
     flex-wrap: wrap;
   }
-
   .container .content .right-side {
     width: 100%;
     margin-left: 0;
   }
 }
+.error-message {
+  margin-bottom: 10px;
+  color: red;
+  font-size: 14px;
+  visibility: visible;
+}
+
+/*# sourceMappingURL=styles.css.map */
