--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap')
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap")
 
 * 
   padding: 0
@@ -9,7 +9,7 @@
   list-style: none
   font-family: "Poppins", sans-serif
 
-.header
+.header 
   position: sticky
   top: 0
   width: 100%
@@ -17,26 +17,26 @@
   background-color: #151418
   z-index: 1
 
-nav
+nav 
   display: flex
   justify-content: space-between
   align-items: center
   padding: 20px 30px
 
-.logo a
+.logo a 
   font-size: 24px
   font-weight: bold
   color: #fff
 
-.logo a span
+.logo a span 
   color: #8739fa
 
-.menu
+.menu 
   display: flex
   justify-content: center
   align-items: center
 
-.menu a
+.menu a 
   display: block
   padding: 7px 15px
   font-size: 17px
@@ -44,24 +44,24 @@ nav
   transition: 0.2s all ease-in-out
   color: #fff
 
-.menu:hover a
+.menu:hover a 
   opacity: 0.4
 
-.menu a:hover
+.menu a:hover 
   opacity: 1
   color: #fff
 
-.menu-icon
+.menu-icon 
   display: none
 
-#menu-toggle
+#menu-toggle 
   display: none
 
-#menu-toggle:checked ~ .menu
+#menu-toggle:checked ~ .menu 
   transform: scale(1, 1)
 
-@media only screen and (max-width: 950px)
-  .menu
+@media only screen and (max-width: 950px) 
+  .menu 
     flex-direction: column
     background-color: #151418
     align-items: start
@@ -75,20 +75,20 @@ nav
     transition: transform 0.3s ease-in-out
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px
 
-  .menu a
+  .menu a 
     margin-left: 12px
 
-  .menu li
+  .menu li 
     margin-bottom: 10px
 
-  .menu-icon
+  .menu-icon 
     display: block
     color: #fff
     font-size: 28px
     cursor: pointer
 
 /* Estilos del formulario */
-body
+body 
   min-height: 100vh
   width: 100%
   background: gray
@@ -96,7 +96,7 @@ body
   align-items: center
   flex-direction: column
 
-.container
+.container 
   margin-top: 20px
   width: 85%
   background: #fff
@@ -104,29 +104,26 @@ body
   padding: 20px 60px 30px 40px
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
 
-.container .content
+.container .content 
   display: flex
   align-items: center
   justify-content: space-between
 
-.container .content .right-side
+.container .content .right-side 
   width: 75%
   margin-left: 75px
 
-.content .right-side .topic-text
+.content .right-side .topic-text 
   font-size: 23px
   font-weight: 600
   color: #3e2093
 
-.right-side .input-box
+.right-side .input-box 
   height: 50px
   width: 100%
   margin: 12px 0
 
-.right-side .input-box input,
-.right-side .input-box textarea,
-.right-side .input-box option,
-.right-side .input-box select
+.right-side .input-box input, .right-side .input-box textarea, .right-side .input-box option, .right-side .input-box select 
   height: 100%
   width: 100%
   border: none
@@ -137,17 +134,17 @@ body
   padding: 0 15px
   resize: none
 
-.right-side .message-box
+.right-side .message-box 
   min-height: 110px
 
-.right-side .input-box textarea
+.right-side .input-box textarea 
   padding-top: 6px
 
-.right-side button
+.right-side button 
   display: inline-block
   margin-top: 12px
 
-.right-side button
+.right-side button 
   color: #fff
   font-size: 18px
   outline: none
@@ -158,33 +155,57 @@ body
   cursor: pointer
   transition: all 0.3s ease
 
-button:hover
+button:hover 
   background: #5029bc
 
-@media (max-width: 950px)
-  .container
+.registro 
+  display: inline-block
+  margin-top: 12px
+
+.registro 
+  color: #fff
+  font-size: 18px
+  outline: none
+  border: none
+  padding: 8px 16px
+  border-radius: 6px
+  background: #3e2093
+  cursor: pointer
+  transition: all 0.3s ease
+
+.registro 
+  background: #5029bc
+
+@media (max-width: 950px) 
+  .container 
     width: 90%
     padding: 30px 40px 40px 35px
 
-  .container .content .right-side
+  .container .content .right-side 
     width: 75%
     margin-left: 55px
 
-@media (max-width: 820px)
-  .container
+@media (max-width: 820px) 
+  .container 
     margin: 40px 0
     height: 100%
 
-  .container .content
+  .container .content 
     flex-direction: column-reverse
 
-  .container .content .left-side
+  .container .content .left-side 
     width: 100%
     flex-direction: row
     margin-top: 40px
     justify-content: center
     flex-wrap: wrap
 
-  .container .content .right-side
+  .container .content .right-side 
     width: 100%
     margin-left: 0
+
+.error-message 
+  margin-bottom: 10px
+  color: red
+  font-size: 14px
+  visibility: visible
