--- a/views/header.pug
+++ b/views/header.pug
@@ -22,7 +22,7 @@ html
             li
               a(href='/') Inicio
                 li
-                  a(href='/usuarios')
+                  a(href='/cifrados/' + user.id)
                     i(class='material-symbols-rounded') person
               li
                 a(href='/logout')
