--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ body
           div.input-box.message-box
             textarea(placeholder="Texto a cifrar...", required="", name="texto-a-cifrar", id="texto-a-cifrar")
           div.input-box
-            input(type="text", name="clave-cifrado", id="clave-cifrado", required="", placeholder="Ingresa la clave de cifrado")
+            input(type="number", name="clave-cifrado", id="clave-cifrado", required="", placeholder="Ingresa la clave de cifrado")
           div.input-box
             select(name="algoritmo", id="")
               option(value="cesar") Código César
