--- a/views/login.pug
+++ b/views/login.pug
@@ -5,6 +5,9 @@ block content
     div.content
       div.right-side
         h2 Iniciar Sesión
+        if error
+          div.error-message
+            p= error
         form(action="/login", method="POST")
           div.input-box
             input(type="text", id="username", name="username", placeholder="Ingresa tu usuario", required)
