--- a/views/header.pug
+++ b/views/header.pug
@@ -16,6 +16,8 @@ html
           if !user
             li
               a(href='/login') Iniciar sesión
+            li
+              a(href='/') Inicio
           else
             li
               a(href='/') Inicio
