Añadido del cifrado por sustitución de Polibio

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,6 +21,7 @@ body
           div.input-box
             select(name="algoritmo", id="algoritmo")
               option(value="cesar") Código César
+              option(value="polibio") Sustitución por Polibio
               option(value="base") Base 64
               option(value="hexa") Hexadecimal
               option(value="binario") Binario
