--- a/views/cifrar.pug
+++ b/views/cifrar.pug
@@ -5,11 +5,11 @@ block content
     div.container
       div.content
         div.right-side
-          div.topic-text Texto Original
+          div.topic-text Texto original
             div.input-box.message-box
               textarea#texto-original(name="texto-original" rows="4" readonly)= textoOriginal
 
-          div.topic-text Texto Cifrado
+          div.topic-text Texto cifrado
             div.input-box.message-box
               textarea#texto-cifrado(name="texto-cifrado" rows="4" readonly)= textoCifrado
             button#copy-button(type="button")
