Ajustes al estilo
Cambios estructurales y añadido de comentarios para la fácil comprensión de los cifrados

--- a/views/header.pug
+++ b/views/header.pug
@@ -23,7 +23,7 @@ html
               a(href='/') Inicio
                 li
                   a(href='/cifrados/' + user.id)
-                    i(class='material-symbols-rounded') person
+                    i(class='material-symbols-rounded') history
               li
                 a(href='/logout')
                   i(class='material-symbols-rounded') logout
